-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7, 6.8
-
None
-
9ed49b99e (dev), 0b503be32 (6.8), 629d354aa (6.7), 03d5b552e (tqtc/lts-6.5)
Various tst_lupdate tests using clang on MinGW 13 assert in the CI:
agent:2024/05/13 12:45:26 build.go:404: 14: FAIL! : tst_lupdate::good(clang-proparsingpaths) '!proc.exitCode()' returned FALSE. ("C:/Users/qt/work/install/bin/lupdate -silent project.pro -clang-parser" exited with code 3 agent:2024/05/13 12:45:26 build.go:404: 14: Info: creating stash file C:\Users\qt\work\qt\qttools\tests\auto\linguist\lupdate\testdata\good\proparsingpaths\.qmake.stash agent:2024/05/13 12:45:26 build.go:404: 14: C:/MINGW_PATH/mingw64/lib/gcc/x86_64-w64-mingw32/13.1.0/include/c++/shared_mutex:237: void std::__shared_mutex_pthread::lock_shared(): Assertion '__ret == 0' failed. agent:2024/05/13 12:45:26 build.go:404: 14: ) agent:2024/05/13 12:45:26 build.go:404: 14: C:/Users/qt/work/qt/qttools/tests/auto/linguist/lupdate/tst_lupdate.cpp(319) : failure location
"exit with code 3" is a hint that the program was aborted (abort()), due to the assert.
- relates to
-
QTBUG-111580 Update provisioned LLVM/Clang binaries to v17
-
- Closed
-
-
QTBUG-119429 Top flaky test: tst_lupdate::good on Windows_11_22H2, Windows_11_23H2, and Windows_10_22H2.
-
- Closed
-
For Gerrit Dashboard: QTBUG-125310 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
571585,3 | lupdate/clang: Fix assert when built with MinGW 13 | dev | qt/qttools | Status: MERGED | +2 | 0 |
571964,2 | lupdate/clang: Fix assert when built with MinGW 13 | 6.8 | qt/qttools | Status: MERGED | +2 | 0 |
572151,2 | lupdate/clang: Fix assert when built with MinGW 13 | 6.7 | qt/qttools | Status: MERGED | +2 | 0 |
572688,2 | lupdate/clang: Fix assert when built with MinGW 13 | tqtc/lts-6.5 | qt/tqtc-qttools | Status: MERGED | +2 | 0 |