lupdate/clang: Fix assert when built with MinGW 13

In lupdate's file significance checks there's a cache that's shared by
multiple threads. This cache was protected by a std::shared_mutex and
corresponding std::shared_lock/std::unique_lock variables.

With the MinGW 13 that's installed in our CI,
x86_64-13.1.0-release-posix-seh-msvcrt-rt_v11-rev1, we sometimes run
into an assert: shared_mutex:237: void
std::__shared_mutex_pthread::lock_shared(): Assertion '__ret == 0'
failed.

The code on our side looks simple enough, I cannot spot a bug. See the
bugtracker for more details. After replacing std::shared_mutex with
QReadWriteLock, the issue is gone. We will file this under "MinGW
Peculiarities".

Fixes: QTBUG-125310
Change-Id: I79f5eed3c16899de959215b295a44221bd31c390
Reviewed-by: Kai Köhne <kai.koehne@qt.io>
(cherry picked from commit 9ed49b99e882f42ff70ee06dc07d5af9ecae71b3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 0b503be32e254132cce8ddb8087d931161f140a2)
(cherry picked from commit 629d354aa180ef2c2b8f28e01286b6f0a73cad09)